# buildsrs

./: .dockerignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Justfile  LICENSE.md  README.md  book.toml  deny.toml  docker-compose.yml  rust-toolchain.toml  stack.yml
backend/: Cargo.toml  Dockerfile  README.md  build.rs
backend/src/: api.rs  bucket.rs  files.rs  lib.rs  main.rs  options.rs  state.rs  storage.rs
backend/src/api/: crates.rs  frontend.rs  jobs.rs
backend/src/bucket/: wasabi.rs
backend/tests/: api.rs
builder/: Cargo.toml  Dockerfile
builder/src/: docker.rs  lib.rs  main.rs  options.rs  websocket.rs
builder/src/docker/: options.rs  tests.rs
builder/tests/crates/no_deps/: Cargo.toml  metadata.json
common/: Cargo.toml
common/src/: api.rs  entities.rs  lib.rs  protocol.rs
crates/: Cargo.toml
database/: Cargo.toml  Dockerfile
database/dumps/: 2023-09-13.sql.xz  2023-09-17.sql.xz
database/migrations/: V1__initial.sql
database/src/: entity.rs  lib.rs  main.rs  options.rs  postgres.rs  temp.rs  tests.rs  util.rs
database/src/postgres/: entity.rs  macros.rs  temp.rs  util.rs
database/tests/: postgres.rs  tests.rs
docs/: SUMMARY.md  introduction.md
docs/authors/: intro.md  metadata.md  override.md  testing.md
docs/developers/: components.md  getting-started.md  intro.md  overview.md  protocols.md  structure.md  testing.md
docs/developers/checklists/: maintenance.md  precommit.md
docs/developers/components/: backend.md  builder.md  database.md  frontend.md  registry-sync.md  storage.md
docs/developers/getting-started/: commands.md  justfile.md  prerequisites.md  running.md  testing.md
docs/developers/overview/: architecture.md  components.md  protocol.md
docs/developers/protocols/: builder.md  crates.md
docs/guides/: architecture.md  deployment.md  development.md  testing.md
docs/users/: cargo-builds.md  intro.md
frontend/: .gitlab-ci.yml  Cargo.toml  index.html  tailwind.config.js
frontend/src/: lib.rs  main.rs
protocol/: Cargo.toml
protocol/src/: lib.rs  messages.rs  signature.rs  types.rs
registry-sync/: Cargo.toml  Dockerfile  README.md
registry-sync/src/: lib.rs  main.rs
registry-sync/tests/: tests.rs
storage/: Cargo.toml
storage/proptest-regressions/: filesystem.txt  s3.txt
storage/src/: cache.rs  filesystem.rs  lib.rs  s3.rs  temp.rs  tests.rs
storage/src/cache/: options.rs
storage/src/filesystem/: options.rs  temp.rs
storage/src/s3/: options.rs  temp.rs
storage/tests/temp/: filesystem.rs  main.rs  s3.rs
