[workspace]
resolver = "2"
members = [
    "backend",
    "builder",
    "common",
    "database",
    "frontend",
    "protocol",
    "registry-sync",
    "storage",
]

[workspace.dependencies]
buildsrs-database = { path = "database" }
buildsrs-common = { path = "common" }
buildsrs-storage = { path = "storage" }
buildsrs-protocol = { path = "protocol" }
tokio = { version = "1.28.0" }

[workspace.package]
license = "MIT"
authors = [
    "Patrick Elsen <pelsen@xfbs.net>",
]
