[workspace]
resolver = "2"
members = [
    "backend",
    "builder",
    "common",
    "database",
    "frontend",
    "protocol",
    "registry-sync",
    "storage",
]

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
buildsrs-common = { path = "common" }
buildsrs-database = { path = "database" }
buildsrs-protocol = { path = "protocol" }
buildsrs-storage = { path = "storage" }
bytes = "1.5.0"
clap = { version = "4.4.7" }
futures = "0.3.29"
proptest = "1.3.1"
serde = "1.0.190"
serde_json = "1.0.108"
test-strategy = "0.3.1"
thiserror = "1.0.50"
tokio = { version = "1.33.0" }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
url = "2.4.1"
uuid = "1.5.0"
ssh-key = "0.6.2"
rand_core = "0.6.4"

[workspace.package]
license = "MIT"
version = "0.1.0"
authors = [
    "Patrick Elsen <pelsen@xfbs.net>",
]
