[package]
name = "buildsrs-backend"
edition = "2021"
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum = { version = "0.7.1", features = ["ws"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
buildsrs-database = { workspace = true }
buildsrs-protocol = { workspace = true }
buildsrs-storage = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
anyhow.workspace = true
futures.workspace = true
thiserror.workspace = true
serde_json.workspace = true
async-trait.workspace = true
bytes.workspace = true
url.workspace = true

[lints]
workspace = true
