[package]
name = "buildsrs-backend"
edition = "2021"
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum = { version = "0.7.1", features = ["ws"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
buildsrs-database = { workspace = true, features = ["options"] }
buildsrs-protocol = { workspace = true }
buildsrs-storage = { workspace = true }
buildsrs-common = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "env"] }
anyhow.workspace = true
futures.workspace = true
thiserror.workspace = true
serde_json.workspace = true
async-trait.workspace = true
bytes.workspace = true
url.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http = { version = "0.5.0", features = ["trace"] }
mime_guess = { version = "2.0.4", optional = true }

[lints]
workspace = true

[features]
default = ["frontend"]
# serve frontend
frontend = ["dep:mime_guess"]
# vendor frontend
frontend-vendor = ["frontend"]

[build-dependencies]
walkdir = "2.4.0"
