[package]
name = "buildsrs-builder"
edition = "2021"
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.20.1", features = ["rustls-tls-native-roots"] }
buildsrs-protocol = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
ssh-key = { workspace = true, features = ["ed25519"] }
url.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
duration-string = "0.3.0"
serde_json.workspace = true
futures.workspace = true
bollard = "0.15.0"
