[package]
name = "buildsrs-builder"
edition = "2021"
version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "buildsrs-builder"
required-features = ["options"]

[dependencies]
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.20.1", features = ["rustls-tls-native-roots"] }
buildsrs-protocol = { workspace = true }
clap = { workspace = true, features = ["derive", "env"], optional = true }
ssh-key = { workspace = true, features = ["ed25519"] }
url.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
duration-string = "0.3.0"
serde_json.workspace = true
futures.workspace = true
#bollard = "0.15.0"
docker-api = { version = "0.14.0" }
reqwest = { version = "0.11.22", features = ["stream"] }
tempdir = "0.3.7"
tar = "0.4.40"
flate2 = "1.0.28"
async-trait.workspace = true
serde.workspace = true
cargo_metadata = "0.18.1"

[features]
default = ["docker", "options"]
docker = []
options = ["dep:clap"]

[lints]
workspace = true
