[package]
name = "buildsrs-builder"
edition = "2021"
version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "buildsrs-builder"
required-features = ["cli"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
buildsrs-protocol = { workspace = true, optional = true }
cargo_metadata = "0.18.1"
clap = { workspace = true, features = ["derive", "env"], optional = true }
docker-api = { version = "0.14.0", optional = true }
duration-string = "0.3.0"
flate2 = "1.0.28"
futures.workspace = true
reqwest = { version = "0.11.22", features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
ssh-key = { workspace = true, features = ["ed25519"], optional = true }
tar = "0.4.40"
tempfile = "3.8.1"
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"], optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing.workspace = true
url.workspace = true

[features]
default = ["cli", "docker"]
docker = ["dep:docker-api"]
options = ["dep:clap"]
websocket = ["dep:tokio-tungstenite", "dep:buildsrs-protocol", "dep:ssh-key"]
cli = ["options", "websocket", "dep:tracing-subscriber"]

[lints]
workspace = true
