[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.185", features = ["derive"] }
ssh-key = { version = "0.6.1", features = ["ed25519"] }
url = { version = "2.4.0", features = ["serde"] }
