[package]
name = "buildsrs-common"
edition = "2021"
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bytes = { workspace = true }
proptest = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
test-strategy = { workspace = true, optional = true }
url = { workspace = true, features = ["serde"] }

[lints]
workspace = true

[features]
proptest = ["dep:proptest", "dep:test-strategy"]
serde = ["dep:serde", "bytes/serde"]
