[package]
name = "buildsrs-common"
edition = "2021"
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bytes = { workspace = true }
proptest = { workspace = true, optional = true }
semver = "1.0.20"
serde = { workspace = true, features = ["derive"], optional = true }
ssh-key.workspace = true
strum.workspace = true
test-strategy = { workspace = true, optional = true }
url = { workspace = true, features = ["serde"] }
uuid.workspace = true

[lints]
workspace = true

[features]
proptest = ["dep:proptest", "dep:test-strategy"]
serde = ["dep:serde", "bytes/serde", "ssh-key/serde", "uuid/serde"]
