[package]
name = "buildsrs-database"
version = "0.1.0"
edition = "2021"
default-run = "migrate"

[dependencies]
clap = { version = "4.4.3", features = ["derive", "env"], optional = true }
futures = "0.3.28"
postgres-types = { version = "0.2.5", features = ["derive"] }
rand = "0.8.5"
refinery = { version = "=0.8.9", features = ["tokio-postgres"], optional = true }
ssh-key = { version = "0.6.1", features = ["ed25519"], optional = true }
strum = { version = "0.24.1", features = ["derive"] }
time = "0.3.21"
tokio = { version = "1.32.0", features = ["macros", "sync", "rt"] }
tokio-postgres = { version = "0.7.8", features = ["with-uuid-1", "with-serde_json-1", "with-chrono-0_4", "with-time-0_3"] }

[dev-dependencies]
lzma-rs = "0.3.0"
refinery = { version = "=0.8.9", features = ["tokio-postgres"] }

[features]
migrations = ["dep:refinery"]
tools = ["migrations", "dep:clap", "dep:ssh-key"]

[[bin]]
name = "migrate"
required-features = ["tools"]
