[package]
name = "buildsrs-database"
edition = "2021"
default-run = "migrate"
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "env"], optional = true }
futures.workspace = true
postgres-types = { version = "0.2.6", features = ["derive"] }
rand = "0.8.5"
refinery = { version = "=0.8.9", features = ["tokio-postgres"], optional = true }
ssh-key = { workspace = true, features = ["ed25519"] }
strum = { version = "0.24.1", features = ["derive"] }
time = "0.3.30"
tokio = { workspace = true, features = ["macros", "sync", "rt", "fs"] }
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1", "with-serde_json-1", "with-chrono-0_4", "with-time-0_3"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
lzma-rs = "0.3.0"
rand_core.workspace = true
refinery = { version = "=0.8.9", features = ["tokio-postgres"] }

[features]
migrations = ["dep:refinery"]
tools = ["migrations", "dep:clap"]

[[bin]]
name = "migrate"
required-features = ["tools"]

[lints]
workspace = true
