[package]
name = "buildsrs-database"
edition = "2021"
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
buildsrs-common.workspace = true
clap = { workspace = true, features = ["derive", "env"], optional = true }
deadpool = "0.10.0"
futures.workspace = true
postgres-types = { version = "0.2.6", features = ["derive"] }
rand = { version = "0.8.5", optional = true }
refinery = { version = "0.8.11", features = ["tokio-postgres"], optional = true }
ssh-key = { workspace = true, features = ["ed25519"] }
strum = { version = "0.25.0", features = ["derive"] }
thiserror.workspace = true
time = "0.3.30"
tokio = { workspace = true, features = ["macros", "sync", "rt", "fs"] }
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1", "with-serde_json-1", "with-chrono-0_4", "with-time-0_3"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
buildsrs-common = { workspace = true, features = ["proptest"] }
lzma-rs = "0.3.0"
rand = { version = "0.8.5" }
rand_core.workspace = true
refinery = { version = "0.8.11", features = ["tokio-postgres"] }

[features]
migrations = ["dep:refinery"]
tools = ["migrations", "dep:clap"]
temp = ["migrations", "dep:rand"]
options = ["dep:clap"]

[[bin]]
name = "buildsrs-database"
required-features = ["tools"]

[[test]]
name = "postgres"
required-features = ["temp"]

[lints]
workspace = true
