[package]
name = "buildsrs-protocol"
edition = "2021"
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bytes = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
ssh-key = { workspace = true, features = ["ed25519", "serde"] }
thiserror.workspace = true
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["serde"] }

[dev-dependencies]
rand_core = { workspace = true, features = ["getrandom"] }
