[package]
name = "buildsrs-registry-sync"
edition = "2021"
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
crates-index = { version = "2.2.0", features = ["git", "git-https", "git-performance"] }
env_logger = "0.10.0"
humantime = "2.1.0"
log = "0.4.20"
url.workspace = true
tokio.workspace = true
buildsrs-database.workspace = true
anyhow.workspace = true

[lints]
workspace = true
