[package]
name = "buildsrs-registry-sync"
edition = "2021"
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
buildsrs-database = { workspace = true, features = ["options"] }
clap = { workspace = true, features = ["derive", "env"] }
crates-index = { version = "2.2.0", features = ["git", "git-https", "git-performance"] }
futures.workspace = true
hex = "0.4.3"
humantime = "2.1.0"
log = "0.4.20"
tempfile = { version = "3.8.1", optional = true }
tokio-stream = "0.1.14"
tokio.workspace = true
url.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true

[dev-dependencies]
buildsrs-database = { workspace = true, features = ["temp"] }
gix = { version = "0.58.0", default-features = false, features = [] }
gix-diff = { version = "0.40.0", default-features = false, features = ["blob"] }
proptest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.108"
test-strategy.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
