[package]
name = "buildsrs-storage"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = "0.1.74"
aws-credential-types = { version = "0.56", optional = true }
aws-sdk-s3 = { version = "0.34", optional = true }
aws-types = { version = "0.56", optional = true }
bytes = "1.5.0"
clap = { version = "4.3.24", features = ["derive", "env"], optional = true }
moka = { version = "0.12.1", features = ["future"], optional = true }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = [] }
url = "2.4.1"
test-strategy = "0.3.1"
proptest = "1.3.1"

[dev-dependencies]
proptest = "1.3.1"
tempdir = "0.3.7"
test-strategy = "0.3.1"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }

[features]
default = ["filesystem", "s3", "options", "cache"]
s3 = ["dep:aws-credential-types", "dep:aws-sdk-s3", "dep:aws-types"]
filesystem = []
cache = ["dep:moka"]
options = ["dep:clap"]
temp = []
