[package]
name = "buildsrs-storage"
edition = "2021"
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
aws-credential-types = { version = "0.56", optional = true }
aws-sdk-s3 = { version = "0.34", optional = true }
aws-types = { version = "0.56", optional = true }
bytes.workspace = true
clap = { workspace = true, features = ["derive", "env"], optional = true }
moka = { version = "0.12.1", features = ["future"], optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = [] }
url.workspace = true
test-strategy.workspace = true
proptest.workspace = true

[dev-dependencies]
test-strategy.workspace = true
proptest.workspace = true
tempdir = "0.3.7"
tokio = { workspace = true, features = ["rt-multi-thread"] }

[features]
default = ["filesystem", "s3", "options", "cache"]
s3 = ["dep:aws-credential-types", "dep:aws-sdk-s3", "dep:aws-types"]
filesystem = ["tokio/fs", "tokio/io-util"]
cache = ["dep:moka"]
options = ["dep:clap"]
temp = []
