[package]
name = "buildsrs-storage"
edition = "2021"
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
aws-config = { version = "0.57", optional = true }
aws-credential-types = { version = "0.57", features = ["hardcoded-credentials"], optional = true }
aws-sdk-s3 = { version = "0.35", optional = true }
aws-types = { version = "0.57", optional = true }
bytes.workspace = true
clap = { workspace = true, features = ["derive", "env"], optional = true }
moka = { version = "0.12.1", features = ["future"], optional = true }
proptest.workspace = true
test-strategy.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [] }
url.workspace = true

[dev-dependencies]
test-strategy.workspace = true
proptest.workspace = true
tempdir = "0.3.7"
tokio = { workspace = true, features = ["rt-multi-thread"] }
rand = "0.8.5"

[features]
default = ["filesystem", "s3", "options", "cache"]
s3 = ["dep:aws-credential-types", "dep:aws-sdk-s3", "dep:aws-types", "dep:aws-config"]
filesystem = ["tokio/fs", "tokio/io-util"]
cache = ["dep:moka"]
options = ["dep:clap"]
temp = []
